css bug fix. // In full screen size the dark mode wasnt displayed correctly.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,11 +25,12 @@ body[data-theme='Light'] {
 }
 
 body {
-  margin: 0;
-  font-family: var(--family);
-  color: var(--colors-text);
-  font-weight: var(--fw-light);
-  background-color: var(--colors-bg);
+   margin: 0;
+   font-family: var(--family);
+   color: var(--colors-text);
+   font-weight: var(--fw-light);
+   background-color: var(--colors-bg);
+   min-height: 100vh;
 
   h1 {
       font-weight: 800;
